# pe-parse-kaitai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  fix-kaitai.patch  fix-kaitai.sh  generate.sh  kaitai.patch
src/: main.cpp  microsoft_pe.cpp  microsoft_pe.h  microsoft_pe.ksy
